--- a/source/dialogs/add-curve/add-curve-modal.html
+++ b/source/dialogs/add-curve/add-curve-modal.html
@@ -3,53 +3,41 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
-                <h4 class="modal-title"><span class="curve-new-32x32"></span>&nbsp;Add New Curve</h4>
+                <h4 class="modal-title">
+                    <span class="curve-new-32x32"></span>&nbsp;Add New Curve</h4>
             </div>
             <div class="modal-body" style="overflow:unset;">
-                <!-- <style>
-                    .ui-select-choices {
-                        position: fixed;
-                        top: auto;
-                        left: auto;
-                        width: auto !important;
-                        min-width: calc( 50% - 50px);
-                    }
-                </style> -->
                 <div class="container-fluid">
                     <h5 class="modal-infomation-title">&nbsp;Curve Infomation</h5>
                     <form class="form-horizontal" action="" name="modalAddCurve">
                         <div class="form-group">
                             <label class="col-sm-6">Well:</label>
                             <div class="col-sm-6">
-                                <ui-select ng-model='wiModal.SelectedWell'
-                                ng-change='wiModal.onWellChanged()'
-                                ng-disabled="wiModal.disabled">
+                                <ui-select ng-model='wiModal.SelectedWell' ng-change='wiModal.onWellChanged()' ng-disabled="wiModal.disabled">
                                     <ui-select-match>{{$select.selected.name}}</ui-select-match>
                                     <ui-select-choices repeat='well in wiModal.wellArr | filter: {name: $select.search} track by $index'>
                                         {{well.name}}</ui-select-choices>
-                                        <ui-select-no-choice>Well not found</ui-select-no-choice>
+                                    <ui-select-no-choice>Well not found</ui-select-no-choice>
                                 </ui-select>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-6">Datasets:</label>
                             <div class="col-sm-6">
-                                  <ui-select ng-model='wiModal.datasetName'>
-                                      <ui-select-match>{{$select.selected.name}}</ui-select-match>
-                                      <ui-select-choices repeat='dataset.id as dataset in wiModal.datasets | filter: {name: $select.search} track by $index'>
-                                          {{dataset.name}}</ui-select-choices>
-                                        <ui-select-no-choice>Dataset not found</ui-select-no-choice>
-                                  </ui-select>
+                                <ui-select ng-model='wiModal.datasetName'>
+                                    <ui-select-match>{{$select.selected.name}}</ui-select-match>
+                                    <ui-select-choices repeat='dataset.id as dataset in wiModal.datasets | filter: {name: $select.search} track by $index'>
+                                        {{dataset.name}}</ui-select-choices>
+                                    <ui-select-no-choice>Dataset not found</ui-select-no-choice>
+                                </ui-select>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-6">Main Family:</label>
+                            <label class="col-sm-6">Family Group:</label>
                             <div class="col-sm-6">
-                                <ui-select ng-model="wiModal.mainFamily" ng-init="wiModal.mainFamily = wiModal.mainFamilies[0]"
-                                ng-change='wiModal.onMainFamilyChange()'>
+                                <ui-select ng-model="wiModal.mainFamily" ng-init="wiModal.mainFamily = wiModal.mainFamilies[0]" ng-change='wiModal.onMainFamilyChange()'>
                                     <ui-select-match placeholder='Select a main family'>{{$select.selected}}</ui-select-match>
-                                    <ui-select-choices
-                                    repeat='item in wiModal.mainFamilies | filter:$select.search'>
+                                    <ui-select-choices repeat='item in wiModal.mainFamilies | filter:$select.search'>
                                         {{item}}
                                     </ui-select-choices>
                                     <ui-select-no-choice>Main Family not found</ui-select-no-choice>
@@ -59,11 +47,9 @@
                         <div class="form-group">
                             <label class="col-sm-6">Family:</label>
                             <div class="col-sm-6">
-                                <ui-select ng-model="wiModal.selectedFamily"
-                                    ng-change='wiModal.onFamilyChanged()'>
+                                <ui-select ng-model="wiModal.selectedFamily" ng-change='wiModal.onFamilyChanged()'>
                                     <ui-select-match placeholder='Select a family'>{{$select.selected.name}}</ui-select-match>
-                                    <ui-select-choices
-                                    repeat='family in wiModal.families | filter:{name:$select.search} | filter: wiModal.mainFamilyFilter track by $index'>
+                                    <ui-select-choices repeat='family in wiModal.families | filter:{name:$select.search} | filter: wiModal.mainFamilyFilter track by $index'>
                                         {{family.name}}
                                     </ui-select-choices>
                                     <ui-select-no-choice>Family not found</ui-select-no-choice>
@@ -81,8 +67,7 @@
                             <div class="col-sm-6">
                                 <ui-select search-enabled='false' ng-model='wiModal.unit'>
                                     <ui-select-match placeholder='Select a unit'>{{$select.selected.unit}}</ui-select-match>
-                                    <ui-select-choices
-                                    repeat='spec.unit as spec in wiModal.selectedFamily.family_spec track by $index'>
+                                    <ui-select-choices repeat='spec.unit as spec in wiModal.selectedFamily.family_spec track by $index'>
                                         {{spec.unit}}
                                     </ui-select-choices>
                                 </ui-select>
@@ -91,15 +76,18 @@
                         <div class="form-group">
                             <label class="control-label col-sm-6">Initial Value: </label>
                             <div class="col-sm-6">
-                                <input type="number" class="form-control wi-form-control"  ng-model="wiModal.initValue">
+                                <input type="number" class="form-control wi-form-control" ng-model="wiModal.initValue">
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" ng-click="wiModal.onRunButtonClicked();" ng-disabled="!wiModal.datasetName || !wiModal.curveName || wiModal.applyingInProgress" class="btn btn-default"><span class="ok-16x16"></span>&nbsp;OK</button>
-                <button type="button" ng-click="wiModal.onCancelButtonClicked();" class="btn btn-default"><span class="close-16x16"></span>&nbsp;Cancel</button>
+                <button type="button" ng-click="wiModal.onRunButtonClicked();" ng-disabled="!wiModal.datasetName || !wiModal.curveName || wiModal.applyingInProgress"
+                    class="btn btn-default">
+                    <span class="ok-16x16"></span>&nbsp;OK</button>
+                <button type="button" ng-click="wiModal.onCancelButtonClicked();" class="btn btn-default">
+                    <span class="close-16x16"></span>&nbsp;Cancel</button>
             </div>
         </div>
     </div>
